<resources>
  <string name="info_development">Development</string>
  <string name="info_design">Design</string>
  <string name="info_design_one">Simon Staib</string>
  <string name="info_smf">Smart Mobile Factory GmbH</string>
  <string name="info_wheelmap_android_two">Version</string>
  <string name="legal_notice_entypo">Entypo pictograms by Daniel Bruce</string>
  <string name="btn_cancel">Cancel</string>
  <string name="btn_okay">Okay</string>
  <string name="btn_quit">Quit</string>
  <string name="error_network_title">Network error</string>
  <string name="error_authorization_error">Email or password was wrong. Sorry. Can\'t log you in.</string>
  <string name="info_android_development_one">Michal Harakaľ</string>
  <string name="info_android_development_two">Michael Kröz</string>
  <string name="info_kartendaten">Mapdata:</string>
  <string name="info_POIData">POI Data:</string>
  <string name="info_kartendaten_points">© OpenStreetMap contributors, ODbL</string>
  <string name="info_kartendaten_three">© MapBox</string>
  <string name="info_webdevelopment_one">Christoph Bünte</string>
  <string name="error_network_failure">Network failure</string>
  <string name="menu_save">Save</string>
  <string name="no_pois">No places were found according to your filter settings</string>
  <string name="poi_new_default_name">New place</string>
  <string name="poi_property_address">Address</string>
  <string name="poi_property_comment">Comment</string>
  <string name="poi_property_name">Name</string>
  <string name="poi_property_nodetype">Type</string>
  <string name="poi_property_phone">Phone</string>
  <string name="poi_property_position">Position</string>
  <string name="poi_property_website">Website</string>
  <string name="settings_category_filter">Category filter</string>
  <string name="support_category_unknown">Category unknown</string>
  <string name="support_nodetype_unknown">Type unknown</string>
  <string name="title_info">Credits</string>
  <string name="title_legal_notice">Legal notice</string>
  <string name="title_pois_detail_edit">Edit the place</string>
  <string name="title_pois_map">Map</string>
  <string name="title_pois_settings">Filter settings</string>
  <string name="ws_disabled">- Entrance has a step or several steps\n- Rooms are not accessible</string>
  <string name="ws_disabled_title">Not wheelchair accessible</string>
  <string name="ws_enabled">- Entrance without steps\n- All rooms without steps</string>
  <string name="ws_enabled_title">Wheelchair accessible</string>
  <string name="ws_limited">- Entrance has one step with max. height 7cm (3 in)\n- Most rooms are without steps</string>
  <string name="ws_limited_title">Partially wheelchair accessible</string>
  <string name="ws_unknown">- Help out by marking places!</string>
  <string name="ws_unknown_title">Unknown status</string>
  <string name="ws_unknown_toilet">- Help out by marking places!</string>
  <string name="ws_unknown_title_toilet">Unknown toilet status</string>
  <string name="ws_disabled_toilet"></string>
  <string name="ws_disabled_title_toilet">No wheelchair accessible toilet</string>
  <string name="ws_enabled_toilet">- Doorways inner width min. 90 cm (35 in)\n- Clear floor space min. 150 cm x 150 cm (59 in x 59 in)\n- Wheelchair-height toilet seat\n- Folding grab rails\n- Accessible hand basin</string>
  <string name="ws_enabled_title_toilet">Wheelchair accessible toilet</string>
  <string name="dashboard_search_hint">Search nearby locations</string>
  <string name="dashboard_button_title_nearby">NEARBY</string>
  <string name="dashboard_button_title_map">MAP</string>
  <string name="dashboard_button_title_categories">CATEGORIES</string>
  <string name="dashboard_button_title_engage">GET INVOLVED</string>
  <string name="dashboard_locations">Places</string>
  <string name="dashboard_button_title_news">NEWS</string>
  <string name="poi_property_city">City</string>
  <string name="poi_property_housenum">No</string>
  <string name="poi_property_postcode">Code</string>
  <string name="poi_property_street">Street</string>
  <string name="position_geopoint">Location</string>
  <string name="to_far_away">Zoom in closer to see places</string>
  <string name="move_the_map">Please move the map by swiping</string>
  <string name="dialog_close_editable">Do you really want to close the edit screen?</string>
  <string name="error_internal_error">An error occurred. Please reopen the app.</string>
  <string name="error_title_occurred">An error occurred!</string>
  <string name="error_authorization_not_osm_connected">Your Wheelmap account is not connected to OpenStreetMap.</string>
  <string name="error_authorization_request_forbidden">Request not possible</string>
  <string name="error_authorization_request_failed">Authorization failed. The app does not have proper access rights to the service. If you are logged in, your can try to log out. Otherwise the app needs to be updated or the service has a problem.</string>
  <string name="error_authorization_required">Authorization required</string>
  <string name="error_category_missing_message">Cannot be saved without a category for the place.</string>
  <string name="error_category_missing_title">No category set!</string>
  <string name="error_network_client_failure">This app cannot communicate with the server. You need an update.</string>
  <string name="error_network_server_failure">The Wheelmap server has a problem. Please try again later.</string>
  <string name="error_network_server_maintenance">The Wheelmap server is down for maintenance. Please try again later</string>
  <string name="error_network_unknown_failure">An unknown network failure occurred. Sorry, communication failed.</string>
  <string name="error_newpoi_message">The new place will be verified before it shows up in the database. This will take some time.</string>
  <string name="error_newpoi_title">New place created</string>
  <string name="error_noid_message">Sorry, this link contains no identification to retrieve from the Wheelmap servers. Unable to find the location.</string>
  <string name="error_noid_title">Link lacks node id</string>
  <string name="error_not_enough_memory">Your phone does not provide enough memory for this application.</string>
  <string name="error_wheelchairstate_missing_message">Please select a wheelchair accessibility status.</string>
  <string name="error_wheelchairstate_missing_title">No wheelchair accessibility status given</string>
  <string name="legal_notice_commonsware_copyright_nicolas">https://mapicons.mapsmarker.com</string>
  <string name="photo_upload_failed">Upload failed</string>
  <string name="photo_upload_successfully">Successfully uploaded</string>
  <string name="photo_upload_picker_title">Option: upload photos</string>
  <string name="photo_upload_picker_gallery">Gallery</string>
  <string name="photo_upload_picker_take_new">Take a new photo</string>
  <string name="photo_upload_progress_title">Uploading photo...</string>
  <string name="menu_about">About</string>
  <string name="menu_directions">Navigation</string>
  <string name="menu_filter">Filter settings</string>
  <string name="menu_new_poi">Create new place</string>
  <string name="menu_search">Search</string>
  <string name="menu_share">Share</string>
  <string name="poi_property_photos">Photos</string>
  <string name="menu_account">Account</string>
  <string name="menu_news">News</string>
  <string name="action_done">Done</string>
  <string name="search_mode_no_point_found">No places found, click the back arrow!</string>
  <string name="poi_property_comment_add_comment">Add comment</string>
  <string name="poi_property_comment_add_adress">Add address</string>
  <string name="poi_property_comment_add_photos">Add photos</string>
  <string name="login_text">Log in with your Wheelmap account.</string>
  <string name="login_email">Email</string>
  <string name="login_password">Password</string>
  <string name="login_forgot_password">Forgot password?</string>
  <string name="login_submit">Login</string>
  <string name="login_dont_have_account">No Wheelmap account? Log in with an OpenStreetMap account on Wheelmap.org, click on your \"Account\" and create a new Wheelmap account.</string>
  <string name="login_new_registration">Register on OSM</string>
  <string name="login_new">New? Register now at OpenStreetMap and Wheelmap.org</string>
  <string name="login_activity_title">Login</string>
  <string name="search_distance">Distance</string>
  <string name="search_execute">Search</string>
  <string name="search_hint_list">Keyword (optional)</string>
  <string name="search_mode_distance">By distance</string>
  <string name="search_no_selection">All</string>
  <string name="search_pick_category">Pick a type</string>
  <string name="search_pick_map">Only the selected map area can be searched.</string>
  <string name="title_search">Search</string>
  <string name="legal_notice_commonsware">Two Modules</string>
  <string name="legal_notice_commonsware_copyright">© CommonsWare LLC</string>
  <string name="legal_notice_commonsware_copyright_two">(Apache License V2)</string>
  <string name="legal_notice_iconscollection">Map Icons Collection</string>
  <string name="legal_notice_iconscollection_copyright">© http://mapicons.nicolasmollet.com\n    </string>
  <string name="legal_notice_iconscollection_copyright_two">(CC BY-SA 3.0)</string>
  <string name="legal_notice_intro">This software is based on other works. Their copyright is as\n        follows:\n    </string>
  <string name="legal_notice_jackson">Jackson JSON Processor</string>
  <string name="legal_notice_jackson_copyright">(Apache License V2)</string>
  <string name="legal_notice_mapsforge">Mapsforge</string>
  <string name="legal_notice_mapsforge_copyright">© http://mapsforge.org (LGPL V3)</string>
  <string name="legal_notice_opensource">This Software is Open Source</string>
  <string name="legal_notice_opensource_copyright">\n        https://github.com/sozialhelden/wheelmap-android\n    </string>
  <string name="legal_notice_opensource_copyright_one">(Apache License V2)</string>
  <string name="legal_notice_pulltorefresh">PullToRefresh Widget</string>
  <string name="legal_notice_pulltorefresh_copyright">© Chris Banes (Apache License V2)</string>
  <string name="legal_notice_springandroid">Spring Android</string>
  <string name="legal_notice_springandroid_copyright">© Spring Framework Project</string>
  <string name="legal_notice_springandroid_copyright_two">(Apache License V2)</string>
  <string name="legal_notice_springandroid_copyright_three">http://www.springframework.org\n    </string>
  <string name="logout_activity_title">Logout</string>
  <string name="login_succesfully">Login successful</string>
  <string name="logout_text">Logged in as: %s</string>
  <string name="logout">Logout</string>
  <string name="settings_login_information">Signed in?</string>
  <string name="settings_login_notsignedin">You are not signed in.</string>
  <string name="settings_login_signedinas">You are signed in as</string>
  <string name="settings_unit_imperial">Imperial</string>
  <string name="settings_unit_metric">Metric</string>
  <string name="settings_unit_preference">Distance measurement unit</string>
  <string name="settings_wheelchair_limited">Limited</string>
  <string name="settings_wheelchair_no">No</string>
  <string name="settings_wheelchair_state">Wheelchair status</string>
  <string name="settings_wheelchair_unknown">Unknown</string>
  <string name="settings_wheelchair_yes">Yes</string>
  <string name="title_editor">Editor</string>
  <string name="title_engage">Get involved</string>
  <string name="login_link_wheelmap">http://wheelmap.org/users/sign_in</string>
  <string name="title_login">Please log in!</string>
  <string name="profile_hint_login">To log in to Wheelmap you need a user account on OpenStreetMap (OSM)</string>
  <string name="profile_hint_no_account_title">You don’t have an OSM user account yet?</string>
</resources>