<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/DetailView"
        android:background="#cfcfcf">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:id="@+id/credit_screen"
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:clickable="true"
                  android:padding="8dp">

        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:src="@drawable/credits_logo"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="15dp"
                />

        <TextView
                android:id="@+id/credits_version"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/info_wheelmap_android_two"/>

        <ImageView android:layout_width="match_parent" android:layout_height="wrap_content"
                   android:src="@drawable/credits_bund"
                   android:layout_gravity="center"
                   android:layout_marginBottom="20dp"
                   android:layout_marginTop="10dp"/>


        <ImageView android:layout_width="match_parent" android:layout_height="wrap_content"
                   android:src="@drawable/credits_sozialhelden"
                   android:layout_gravity="center"
                   android:layout_marginTop="10dp"
                   android:layout_marginBottom="20dp"/>

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal"
                      android:gravity="center_horizontal"
                      android:layout_marginTop="8dp"
                      android:layout_marginBottom="20dp"
                      >


            <LinearLayout android:layout_width="wrap_content"
                          android:layout_height="match_parent"
                          android:orientation="vertical"
                          android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/info_development"
                        android:textStyle="bold"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/info_smf"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/info_android_development_one"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/info_android_development_two"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/info_webdevelopment_one"/>
            </LinearLayout>

            <LinearLayout android:layout_width="wrap_content"
                          android:layout_height="match_parent"
                          android:orientation="vertical"
                          android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/info_design"
                        android:textStyle="bold"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/info_design_one"
                        />
            </LinearLayout>

        </LinearLayout>


        <include layout="@layout/separator"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_info"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginTop="20dp"/>

        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                     android:id="@+id/tableLayout1"

                     android:layout_width="fill_parent"
                     android:layout_height="fill_parent" >

            <!-- 2 columns -->
            <TableRow
                    android:id="@+id/tableRow1"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:padding="5dip" >

                <TextView

                        android:layout_weight="1"
                        android:text="@string/info_POIData"
                        android:gravity="right|end"
                        android:paddingRight="4dp"
                    android:paddingEnd="4dp"/>
                <TextView
                        android:layout_weight="1"
                        android:id="@+id/openStreetMapLink"
                        android:text="@string/info_kartendaten_points"
                        android:gravity="left"/>

            </TableRow>
            <!-- 2 columns -->
            <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dip" >

                <TextView
                        android:layout_weight="1"
                        android:text="@string/info_kartendaten"
                        android:gravity="right|end"
                        android:paddingRight="4dp"
                    android:paddingEnd="4dp"/>

                <TextView

                        android:id="@+id/openMapBox"
                        android:text="@string/info_kartendaten_three"
                        android:layout_weight="1"
                        android:gravity="left|start" />

            </TableRow>
            <!-- 2 columns -->
            <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dip" >

                <TextView
                        android:layout_weight="1"
                        android:text="@string/legal_notice_iconscollection"
                        android:gravity="right|end"
                        android:paddingRight="4dp"
                    android:paddingEnd="4dp"/>

                <TextView
                        android:id="@+id/linkNicolasMollet"
                        android:layout_weight="1"
                        android:gravity="left|start"
                        android:text="@string/legal_notice_commonsware_copyright_nicolas"/>


            </TableRow>

        </TableLayout>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/legal_notice_entypo"
                android:layout_marginBottom="5dp"
                android:gravity="center"/>
    </LinearLayout>
</ScrollView>