<?xml version="1.0" encoding="utf-8"?>
<!--
  #%L
  Wheelmap - App
  %%
  Copyright (C) 2011 - 2012 Michal Harakal - Michael Kroez - Sozialhelden e.V.
  %%
  Wheelmap App based on the Wheelmap Service by Sozialhelden e.V.
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS-IS" BASIS
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  #L%
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
              android:background="#cfcfcf">
    <org.wheelmap.android.view.VerticalScrollView
                  android:layout_width="match_parent"
                  android:layout_height="0dp"
                  android:layout_weight="1"
                  android:scrollbars="vertical"
                  android:fillViewport="true">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="2dp"
                    android:text="@string/poi_property_name"
                    android:textStyle="bold"/>


           <FrameLayout
                    android:id="@+id/edit_title_text_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#eeeeee">

                <EditText
                          android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                          style="@style/DetailFontNew.Editable"
                          android:hint="@string/poi_property_name"

                          />

            </FrameLayout>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="2dp"
                    android:text="@string/poi_property_nodetype"
                    android:textStyle="bold"/>


             <FrameLayout
                    android:id="@+id/edit_nodetype"
                    style="@style/Container.Pressable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                    android:background="#eeeeee">

                <TextView
                        android:id="@+id/nodetype"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="8dp"
                        android:hint="@string/poi_property_nodetype"
                        />
            </FrameLayout>


            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="2dp"
                    android:text="@string/poi_property_position"
                    android:textStyle="bold"/>

            <FrameLayout
                    android:id="@+id/edit_geolocation"
                    style="@style/Container.Pressable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="#eeeeee">

                <TextView
                        android:id="@+id/geolocation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="8dp"
                        android:hint="@string/poi_property_position"
                        />
            </FrameLayout>

            <include  layout="@layout/item_wheelchair_access_state"/>

            <include  layout="@layout/item_wheelchair_toilet_state"/>


            <TextView
                    android:layout_width="match_parent" android:layout_height="wrap_content"

                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="2dp"
                    android:text="@string/poi_property_comment"
                    android:textStyle="bold"/>
            <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="#eeeeee">
                    <EditText
                            android:id="@+id/comment"
                            style="@style/DetailFontNew.Editable"
                            android:hint="@string/poi_property_comment"/>
            </LinearLayout>


            <TextView
                    android:layout_width="match_parent" android:layout_height="wrap_content"

                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="2dp"
                    android:text="@string/poi_property_address"
                    android:textStyle="bold"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#eeeeee"
                    android:orientation="vertical">

                <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    <EditText
                            android:id="@+id/street"
                            style="@style/DetailFontNew.Editable"
                            android:layout_width="0dip"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.8"
                            android:hint="@string/poi_property_street"/>

                    <EditText
                            android:id="@+id/housenum"
                            style="@style/DetailFontNew.Editable"
                            android:layout_width="0dip"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.2"
                            android:inputType="textShortMessage"
                            android:hint="@string/poi_property_housenum"/>
                </LinearLayout>



                <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    <EditText
                            android:id="@+id/postcode"
                            style="@style/DetailFontNew.Editable"
                            android:layout_width="0dip"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.3"
                            android:inputType="number"
                            android:hint="@string/poi_property_postcode"/>

                    <EditText
                            android:id="@+id/city"
                            style="@style/DetailFontNew.Editable"
                            android:layout_width="0dip"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.7"
                            android:hint="@string/poi_property_city"/>
                </LinearLayout>

                <EditText
                        android:id="@+id/phone"
                        style="@style/DetailFontNew.Editable"
                        android:autoLink="phone"
                        android:inputType="phone"
                        android:hint="@string/poi_property_phone"/>

                <EditText
                        android:id="@+id/website"
                        style="@style/DetailFontNew.Editable"
                        android:autoLink="web"
                        android:inputType="textWebEmailAddress"
                        android:hint="@string/poi_property_website"/>
            </LinearLayout>



            <View
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

        </LinearLayout>
    </org.wheelmap.android.view.VerticalScrollView>

    <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/separator_large"
            android:layout_alignParentBottom="true"
            android:background="@android:color/black"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

        <ImageButton
                android:id="@+id/detail_save"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="0dp"
                android:background="@null"
                android:src="@drawable/detail_ic_save"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="match_parent"
                  android:text="@string/menu_save"
                  android:gravity="center"
                  android:layout_marginTop="-12dp"
                />

    </LinearLayout>
</LinearLayout>